Displaying Customers with their details, possibility to Edit and Save changes to Database.  Also list of bicycles with details about it pulled from SQL database.

--- a/Web.config
+++ b/Web.config
@@ -11,8 +11,9 @@
       requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-BikeToGoRental-20200319120932.mdf;Initial Catalog=aspnet-BikeToGoRental-20200319120932;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection"
+         connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\georg\source\repos\BikeToGoRental\App_Data\aspnet-BikeToGoRental-20200319120932.mdf;Integrated Security=True"
+         providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0"/>
