Fetching data from bike api to sort out the user roles, admins can still add new customers and bikes, while logged as regular user you cannot add or edit the bikes. Need to secure the customer package in the same way be fetching the data from the customer api and restricting it. Registering users works now.

--- a/BikeToGoRental.csproj
+++ b/BikeToGoRental.csproj
@@ -280,6 +280,10 @@
     <Compile Include="Migrations\202003281650370_SeedUsers.designer.cs">
       <DependentUpon>202003281650370_SeedUsers.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202003292012058_AddingNewPropertiesToUser.cs" />
+    <Compile Include="Migrations\202003292012058_AddingNewPropertiesToUser.designer.cs">
+      <DependentUpon>202003292012058_AddingNewPropertiesToUser.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Bike.cs" />
@@ -288,6 +292,7 @@
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\MembershipType.cs" />
     <Compile Include="Models\Min18Years.cs" />
+    <Compile Include="Models\RoleName.cs" />
     <Compile Include="Models\SurfaceType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -1046,6 +1051,7 @@
     <Content Include="Scripts\popper-utils.min.js.map" />
     <Content Include="Scripts\popper-utils.js.map" />
     <Content Include="Views\Bikes\BikeForm.cshtml" />
+    <Content Include="Views\Bikes\ReadOnlyIndex.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="obj\Debug\TempPE\" />
@@ -1093,6 +1099,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202003281650370_SeedUsers.resx">
       <DependentUpon>202003281650370_SeedUsers.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202003292012058_AddingNewPropertiesToUser.resx">
+      <DependentUpon>202003292012058_AddingNewPropertiesToUser.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
