--- a/packages.config
+++ b/packages.config
@@ -5,6 +5,11 @@
   <package id="bootbox" version="4.3.0" targetFramework="net472" />
   <package id="bootstrap" version="4.4.1" targetFramework="net472" />
   <package id="EntityFramework" version="6.4.0" targetFramework="net472" />
+  <package id="Glimpse" version="1.8.6" targetFramework="net472" />
+  <package id="Glimpse.Ado" version="1.7.3" targetFramework="net472" />
+  <package id="Glimpse.AspNet" version="1.8.0" targetFramework="net472" />
+  <package id="Glimpse.EF6" version="1.6.5" targetFramework="net472" />
+  <package id="Glimpse.Mvc5" version="1.5.3" targetFramework="net472" />
   <package id="jQuery" version="3.4.1" targetFramework="net472" />
   <package id="jquery.datatables" version="1.10.15" targetFramework="net472" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net472" />
@@ -42,5 +47,6 @@
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net472" />
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net472" />
   <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net472" />
+  <package id="Twitter.Typeahead" version="0.11.1" targetFramework="net472" />
   <package id="WebGrease" version="1.6.0" targetFramework="net472" />
 </packages>
