--- a/BikeToGoRental.csproj
+++ b/BikeToGoRental.csproj
@@ -241,6 +241,7 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\Api\BikesController.cs" />
     <Compile Include="Controllers\Api\CustomersController.cs" />
+    <Compile Include="Controllers\Api\RentalsController.cs" />
     <Compile Include="Controllers\BikesController.cs" />
     <Compile Include="Controllers\CustomersController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -250,6 +251,7 @@
     <Compile Include="Dtos\BikeDto.cs" />
     <Compile Include="Dtos\CustomerDto.cs" />
     <Compile Include="Dtos\NewRentalDto.cs" />
+    <Compile Include="Dtos\RentalDto.cs" />
     <Compile Include="GlimpseSecurityPolicy.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -318,6 +320,26 @@
     <Compile Include="Migrations\202004012002030_AddingAvailabilityToBikes.designer.cs">
       <DependentUpon>202004012002030_AddingAvailabilityToBikes.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202004031201238_UpdateonModel.cs" />
+    <Compile Include="Migrations\202004031201238_UpdateonModel.designer.cs">
+      <DependentUpon>202004031201238_UpdateonModel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202004031228029_UpdateRentalModel.cs" />
+    <Compile Include="Migrations\202004031228029_UpdateRentalModel.designer.cs">
+      <DependentUpon>202004031228029_UpdateRentalModel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202004031235428_NewDbRow.cs" />
+    <Compile Include="Migrations\202004031235428_NewDbRow.designer.cs">
+      <DependentUpon>202004031235428_NewDbRow.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202004031243208_UpdateonModel1.cs" />
+    <Compile Include="Migrations\202004031243208_UpdateonModel1.designer.cs">
+      <DependentUpon>202004031243208_UpdateonModel1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202004031253518_AddingRentalTable.cs" />
+    <Compile Include="Migrations\202004031253518_AddingRentalTable.designer.cs">
+      <DependentUpon>202004031253518_AddingRentalTable.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
@@ -335,6 +357,7 @@
     <Compile Include="ViewModels\ExternalLoginConfirmationViewModel.cs" />
     <Compile Include="ViewModels\NewBikeViewModel.cs" />
     <Compile Include="ViewModels\NewCustomerViewModel.cs" />
+    <Compile Include="ViewModels\NewRentalViewModel.cs" />
     <Compile Include="ViewModels\RegisterViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -550,6 +573,8 @@
     <Content Include="Content\DataTables\images\sort_desc.png" />
     <Content Include="Content\DataTables\images\sort_desc_disabled.png" />
     <Content Include="Content\DataTables\swf\flashExport.swf" />
+    <Content Include="Content\toastr.css" />
+    <Content Include="Content\toastr.min.css" />
     <Content Include="Content\typeahead.css" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
@@ -604,6 +629,8 @@
     <Content Include="Content\DataTables\css\semanticui.scss" />
     <Content Include="Content\DataTables\css\mixins.scss" />
     <Content Include="Content\DataTables\css\common.scss" />
+    <Content Include="Content\toastr.scss" />
+    <Content Include="Content\toastr.less" />
     <None Include="packages\jQuery.3.4.1\Content\Scripts\jquery-3.4.1-vsdoc.js" />
     <Content Include="packages\jQuery.3.4.1\Content\Scripts\jquery-3.4.1.js" />
     <Content Include="packages\jQuery.3.4.1\Content\Scripts\jquery-3.4.1.min.js" />
@@ -1037,6 +1064,8 @@
     <Content Include="Scripts\src\utils\setAttributes.js" />
     <Content Include="Scripts\src\utils\setStyles.js" />
     <Content Include="Scripts\src\utils\setupEventListeners.js" />
+    <Content Include="Scripts\toastr.js" />
+    <Content Include="Scripts\toastr.min.js" />
     <Content Include="Scripts\typeahead.bundle.js" />
     <Content Include="Scripts\typeahead.bundle.min.js" />
     <Content Include="Scripts\typeahead.jquery.js" />
@@ -1099,6 +1128,7 @@
     <Content Include="Views\Bikes\ReadOnlyIndex.cshtml" />
     <Content Include="Views\Customers\ReadOnlyIndex.cshtml" />
     <Content Include="Views\Rentals\New.cshtml" />
+    <Content Include="Views\Rentals\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="obj\Debug\TempPE\" />
@@ -1158,6 +1188,21 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202004012002030_AddingAvailabilityToBikes.resx">
       <DependentUpon>202004012002030_AddingAvailabilityToBikes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202004031201238_UpdateonModel.resx">
+      <DependentUpon>202004031201238_UpdateonModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202004031228029_UpdateRentalModel.resx">
+      <DependentUpon>202004031228029_UpdateRentalModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202004031235428_NewDbRow.resx">
+      <DependentUpon>202004031235428_NewDbRow.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202004031243208_UpdateonModel1.resx">
+      <DependentUpon>202004031243208_UpdateonModel1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202004031253518_AddingRentalTable.resx">
+      <DependentUpon>202004031253518_AddingRentalTable.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
