Added my rentals page, but no logic behind it. Fixed about us page, but just with template info. Have to extend my knowledge further before continuing with it.

--- a/BikeToGoRental.csproj
+++ b/BikeToGoRental.csproj
@@ -1154,6 +1154,7 @@
     <Content Include="Views\Rentals\New.cshtml" />
     <Content Include="Views\Rentals\Index.cshtml" />
     <Content Include="Views\Rentals\ReadOnlyIndex.cshtml" />
+    <Content Include="Views\Customers\MyRentals.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Areas\" />
